# Battery-market-maker

./: .gitignore  CLAUDE_CODE_BOOTSTRAP.md  IE590_proposal_final.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
backend/: .env.example  DEPLOY.md  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: settings.py
backend/app/network/: topologies.py
backend/app/routers/: forecasting.py  network.py  optimization.py  scenarios.py  sdp.py  stackelberg.py
backend/app/scenarios/: library.py
backend/app/schemas/: forecasting.py  network.py  optimization.py  scenarios.py  sdp.py  stackelberg.py
backend/app/solvers/: forecasts.py  multiperiod_opf.py  sdp_wrapper.py  singleperiod_opf.py  stackelberg.py
backend/app/ws/: solve_progress.py
backend/tests/: conftest.py  test_forecasting.py  test_meta.py  test_networks.py  test_optimization.py  test_scenarios.py  test_sdp.py  test_solver_handverified.py  test_websocket.py
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOY.md
figures/: captions.md
frontend/: .env.example  .prettierrc  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vercel.json  vite.config.ts  vitest.config.ts
frontend/public/: realtime_simulator_v2.html  sitemap.xml
frontend/src/: index.css  main.tsx
frontend/src/api/: client.ts  ws.ts
frontend/src/hooks/: useApiHealth.ts  useFrameState.ts  useLMPHistory.ts  useLiveDispatch.ts  useLiveFrame.ts  usePageMeta.ts  useScreenshotMode.ts  useSolveSimulator.ts
frontend/src/lib/: calculations.ts  cn.ts  colors.ts  exportCalculator.ts  format.ts  gpuCalculator.ts  livescenarios.ts  (+1 more)
notebooks/: 00_data_inspection.ipynb  01_validation.ipynb  02_real_data_results.ipynb
report/: IE590_final_report.md
slides/: IE590_final.md
src/: __init__.py
src/eval/: __init__.py  benchmark.py  plots.py
src/forecasting/: __init__.py  xgboost_forecaster.py
src/policies/: __init__.py  mpc.py  myopic_greedy.py  perfect_foresight_lp.py  types.py
src/utils/: __init__.py  config.py  pjm_data_loader.py  synthetic_data.py
tests/: test_benchmark.py  test_config.py  test_mpc.py  test_myopic_greedy.py  test_perfect_foresight_lp.py  test_pjm_data_loader.py  test_plots.py  test_synthetic_data.py  test_types.py  test_xgboost_forecaster.py
(+54 files in other folders)
