[project]
name = "ie590-project"
version = "0.1.0"
description = "Stochastic dynamic programming for grid-scale battery co-optimization on PJM data (IE 590, Purdue)"
authors = [{ name = "Ian Kleimans" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "jupyter>=1.0",
    "cvxpy>=1.5",
    "highspy>=1.7",
    "statsmodels>=0.14",
    "xgboost>=2.0",
    "scikit-learn>=1.3",
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers --strict-config"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/__init__.py", "tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
